--- a/views/course-analytics/preview-statistics.ejs
+++ b/views/course-analytics/preview-statistics.ejs
@@ -22,7 +22,7 @@
                     <div class="col-xs-4 border-right" style="padding-right: 5px; padding-left: 5px;">
                         <div class="description-block">
                             <h5 class="description-header" style="font-size: 20px; margin-bottom: 5px;"><i class="fa fa-file-pdf-o"></i> <i class="fa fa-file-video-o"></i></h5>
-                            <span class="description-text" style="font-size: 12px"><b>{{totalPdf}}</b> {{totalPdf <= 1 ? 'pdf': 'pdf'}}</span><br/>
+                            <span class="description-text" style="font-size: 12px"><b>{{totalPdf}}</b> {{totalPdf <= 1 ? 'pdf File': 'pdf Files'}}</span><br/>
                             <span class="description-text" style="font-size: 12px"><b>{{totalVideo}}</b> {{totalVideo <= 1 ? 'video': 'videos'}}</span>
                         </div>
                         <!-- /.description-block -->
