--- a/views/admin-lte/advanced-search/search-form.ejs
+++ b/views/admin-lte/advanced-search/search-form.ejs
@@ -1,137 +1,173 @@
-<div style="padding-top: 20px" ng-controller="AdvancedSearchController">
-	<div class="container">
-		<div class="row">
+<div style = "padding-top: 20px" ng-controller = "AdvancedSearchController">
+    <div class = "container">
+        <div class = "row">
 
-			<!--Filters panel-->
-			<div class="col-md-3">
-				<div>
+            <!--Filters panel-->
+            <div class = "col-md-3">
+                <div>
 
-					<!--Sory by-->
-					<fieldset style="margin-bottom:20px">
-						<legend style="padding:0; margin-bottom:5px">Sort order</legend>
+                    <!--Sory by-->
+                    <fieldset style = "margin-bottom:20px">
+                        <legend style = "padding:0; margin-bottom:5px">Sort order</legend>
 
-						<select class="form-control" ng-model="sortBy" ng-init="sortBy='-score'">
-							<option selected value="-score">Best match</option>
-							<option value="-created">Recently added</option>
-							<option value="created">Oldest first</option>
-							<option value="-updated">Recently updated</option>
-							<option value="updated">Recently not updated</option>
-               	 		</select>
-					</fieldset>
+                        <select class = "form-control" ng-model = "sortBy" ng-init = "sortBy='-score'">
+                            <option selected value = "-score">Best match</option>
+                            <option value = "-created">Recently added</option>
+                            <option value = "created">Oldest first</option>
+                            <option value = "-updated">Recently updated</option>
+                            <option value = "updated">Recently not updated</option>
+                        </select>
+                    </fieldset>
 
-					<!--Search in-->
-					<fieldset style="margin-bottom:20px">
-						<legend title="Defines which resources should the query look into" style="padding:0; margin-bottom:5px">Search in</legend>
+                    <!--Search in-->
+                    <fieldset style = "margin-bottom:20px">
+                        <legend title = "Defines which resources should the query look into"
+                                style = "padding:0; margin-bottom:5px">Search in
+                        </legend>
 
-						<label><input type="checkbox" ng-model="resources.categories.selected"> Categories</label><br/>
-						<label><input type="checkbox" ng-model="resources.contentNodes.selected"> Content nodes</label><br/>
-						<label><input type="checkbox" ng-model="resources.courses.selected"> Courses</label><br/>
-						<label><input type="checkbox" ng-model="resources.videoAnnotations.selected"> Video annotations</label><br/>
-						<label><input type="checkbox" ng-model="resources.pdfAnnotations.selected"> PDF annotations</label>
-					</fieldset>
+                        <label><input type = "checkbox" ng-model = "resources.categories.selected"> <img
+                                    style = "width:24px;height:24px" ng-src = "/img/search/category-new.png"
+                                    alt = "Image"> Categories</label><br />
+                        <label><input type = "checkbox" ng-model = "resources.contentNodes.selected"> <img
+                                    style = "width:20px;height:20px" ng-src = "/img/search/contentNode-new.png"
+                                    alt = "Image"> Content Nodes</label><br />
+                        <label><input type = "checkbox" ng-model = "resources.courses.selected"> <img
+                                    style = "width:20px;height:20px" ng-src = "/img/search/course-new.png"
+                                    alt = "Image"> Courses</label><br />
+                        <label><input type = "checkbox" ng-model = "resources.videoAnnotations.selected"> <img
+                                    style = "width:20px;height:20px" ng-src = "/img/search/videoAnnotation-new.png"
+                                    alt = "Image"> Video Annotations</label><br />
+                        <label><input type = "checkbox" ng-model = "resources.pdfAnnotations.selected"> <img
+                                    style = "width:20px;height:20px" ng-src = "/img/search/pdfAnnotation-new.png"
+                                    alt = "Image"> PDF Annotations</label><br />
+                        <label><input type = "checkbox" ng-model = "resources.extResources.selected"> <img
+                                    style = "width:20px;height:20px" ng-src = "/img/search/extResources-new.png"
+                                    alt = "Image"> External Resources</label>
+                    </fieldset>
 
-					<!--Network-->
-					<fieldset style="margin-bottom:20px">
-						<legend title="Defines in which network the query lookup will be performed" style="padding:0; margin-bottom:5px">Network</legend>
+                    <!--Network-->
+                    <fieldset style = "margin-bottom:20px">
+                        <legend title = "Defines in which network the query lookup will be performed"
+                                style = "padding:0; margin-bottom:5px">Network
+                        </legend>
 
-						<label title="The query lookup will be performed globally">
-							<input type="radio" ng-model="network" name="network" value="global" checked> Global</label><br/>
-						<label title="The query lookup will be performed only on content, where you have full or partial ownership">
-							<input type="radio" ng-model="network" name="network" value="owned"> Owned</label><br/>
-						<label title="The query lookup will be performed on content which you and the people around you are engaged in">
-							<input disabled type="radio" ng-model="network" name="network" value="group"> Group</label>
-					</fieldset>
+                        <label title = "The query lookup will be performed globally">
+                            <input type = "radio" ng-model = "network" name = "network" value = "global" checked> Global</label><br />
+                        <label title = "The query lookup will be performed only on content, where you have full or partial ownership">
+                            <input type = "radio" ng-model = "network" name = "network" value = "owned">
+                            Owned</label><br />
+                        <label title = "The query lookup will be performed on content which you and the people around you are engaged in">
+                            <input disabled type = "radio" ng-model = "network" name = "network" value = "group"> Group</label>
+                    </fieldset>
 
-					<!--Period-->
-					<fieldset style="margin-bottom:20px">
-						<legend title="Set the period from which results will be considered" style="padding:0; margin-bottom:5px">Period</legend>
+                    <!--Period-->
+                    <fieldset style = "margin-bottom:20px">
+                        <legend title = "Set the period from which results will be considered"
+                                style = "padding:0; margin-bottom:5px">Period
+                        </legend>
 
-						<div class="input-group">
-							<div class="input-group-addon">
-								<i class="fa fa-clock-o"></i>
-							</div>
-							<input date-range-picker class="form-control date-picker" type="text" ng-model="filterDate" />
-						</div>
-					</fieldset>
-				</div>
-			</div>
+                        <div class = "input-group">
+                            <div class = "input-group-addon">
+                                <i class = "fa fa-clock-o"></i>
+                            </div>
+                            <input date-range-picker class = "form-control date-picker" type = "text"
+                                   ng-model = "filterDate" />
+                        </div>
+                    </fieldset>
+                </div>
+            </div>
 
-			<!--  matches  -->
-			<div class="col-md-6">
+            <!--  matches  -->
+            <div class = "col-md-6">
 
-				<!-- No matches -->
-				<h3 style="text-align: center; padding-top:50px" ng-show="result != null && result.length === 0">No results found. Please, try a different search term.</h3>
+                <!-- No matches -->
+                <h3 style = "text-align: center; padding-top:50px" ng-show = "result != null && result.length === 0">No
+                    results found. Please, try a different search term.</h3>
 
-				<!--  Found matches -->
-				<legend ng-show="result != null && result.length > 0">{{result.length}} matches found for '{{searchTerm}}'</legend>
-
-				<!-- results -->
-				<ul class="products-list product-list-in-box">
-					<li class="item box" ng-repeat="item in result | orderBy: sortBy" style="margin: 0 0 5px 0; padding: 10px">
-						<div class="product-img">
-							<img style="width:35px;height:35px" ng-src="/img/search/{{item.type}}.png" alt="Image">
-						</div>
-						<div class="product-info">
-							<a href="{{item.link}}" class="product-title">{{item.title}}
-                      		<span class="label pull-right"
-							  title="Match score. &#013;The higer the value, the better score. &#013;Label is also color coded, where 'Green' represents a good match, &#013;while 'Orange' and 'Red' are progressively worse."
-							  ng-class="{'label-success': (item.score >= 0.95), 'label-warning': (item.score < 0.95), 'label-danger': (item.score < 0.7)}"
-							  >{{item.score | number : 2}}</span></a>
-							<span class="product-description">{{item.description}}</span>
-							<span style="margin-top:5px;font-size: 0.75em" class="product-description pull-right">{{item.created | date : "dd-MM-yyyy 'at' h:mma"}}</span>
-						</div>
-					</li>
-				</ul>
-			</div>
-
-			<!--  relevant matches -->
-			<div class="col-md-3" ng-show="relevant != null && relevant.length > 0">
-				<legend title="This content is not a direct match, &#013;but a recommended result, found by matching &#013;your search query with your personal network.">
-                    Recommendations
+                <!--  Found matches -->
+                <legend ng-show = "result != null && result.length > 0">{{result.length}} matches found for
+                    '{{searchTerm}}'
                 </legend>
 
-				<!-- results -->
-				<ul class="products-list product-list-in-box">
-					<li class="item box" ng-repeat="item in relevant | orderBy: -score" style="margin: 0 0 5px 0; padding: 10px">
-						<div class="product-img">
-							<img style="width:35px;height:35px" ng-src="/img/search/{{item.type}}.png" alt="Image">
-						</div>
-						<div class="product-info">
-							<a href="{{item.link}}" class="product-title">{{item.title}}
-                      		<span class="product-description">{{item.description}}</span>
-						</div>
-					</li>
-				</ul>
-			</div>
-		</div>
+                <!-- results -->
+                <ul class = "products-list product-list-in-box">
+                    <li class = "item box" ng-repeat = "item in result | orderBy: sortBy"
+                        style = "margin: 0 0 5px 0; padding: 10px">
+                        <div class = "product-img">
+                            <img style = "width:40px;height:40px" ng-src = "/img/search/{{item.type}}-new.png"
+                                 alt = "Image">
+                        </div>
+                        <div class = "product-info">
+                            <a href = "{{item.link}}" class = "product-title">{{item.title}}
+                                <span class = "label pull-right"
+                                      title = "Match score. &#013;The higer the value, the better score. &#013;Label is also color coded, where 'Green' represents a good match, &#013;while 'Orange' and 'Red' are progressively worse."
+                                      ng-class = "{'label-success': (item.score >= 0.95), 'label-warning': (item.score < 0.95), 'label-danger': (item.score < 0.7)}"
+                                >{{item.score | number : 2}}</span></a>
+                            <span class = "product-description">{{item.description}}</span>
+                            <span style = "margin-top:5px;font-size: 0.75em" class = "product-description pull-right">{{item.created | date : "dd-MM-yyyy 'at' h:mma"}}</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
 
-        <!--  popular matches -->
-		<div class="row" ng-show="popular != null && popular.length > 0">
-			<div class="col-md-6 col-md-offset-3">
-                <legend title="Here you'll find the most popular content in CourseMapper">
-                    <div style="display: inline-block">
-                        <span>Popular by</span>
-                        <select class="form-control" ng-model="popularBy" ng-init="popularBy='activity'">
-                            <option selected value="activity">highest activity</option>
-                            <option value="users">number of users</option>
-                            <option value="favorited">times added in favorites</option>
+            <div class = "col-md-3">
+                <!--  relevant matches -->
+                <div ng-show = "relevant != null && relevant.length > 0">
+                    <legend title = "This content is not a direct match, &#013;but a recommended result, found by matching &#013;your search query with your personal network.">
+                        Recommendations
+                    </legend>
+
+                    <!-- results -->
+                    <ul class = "products-list product-list-in-box">
+                        <li class = "item box" ng-repeat = "item in relevant | orderBy: -score"
+                            style = "margin: 0 0 5px 0; padding: 10px">
+                            <div class = "product-img">
+                                <img style = "width:40px;height:40px" ng-src = "/img/search/{{item.type}}-new.png"
+                                     alt = "Image">
+                            </div>
+                            <div class = "product-info">
+                                <a href = "{{item.link}}" class = "product-title">{{item.title}}
+                                    <span class = "product-description">{{item.description}}</span>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <br>
+                <br>
+
+                <!--  popular matches -->
+                <div ng-show = "popular != null && popular.length > 0">
+                    <legend title = "Here you'll find the most popular content in CourseMapper">
+                        <div style = "display: inline-block">
+                            <span>Popular Content</span>
+                        </div>
+                    </legend>
+                    <div style="margin-bottom: 10px">
+                        <select class = "form-control" ng-model = "popularBy" ng-init = "popularBy='activity'">
+                            <option selected value = "activity">Highest activity</option>
+                            <option value = "users">Number of users</option>
+                            <option value = "favorited">Times added in favorites</option>
                         </select>
                     </div>
-                </legend>
 
-				<!-- results -->
-				<ul class="products-list product-list-in-box">
-					<li class="item box" ng-repeat="item in popular | orderBy: -score" style="margin: 0 0 5px 0; padding: 10px">
-						<div class="product-img">
-							<img style="width:35px;height:35px" ng-src="/img/search/{{item.type}}.png" alt="Image">
-						</div>
-						<div class="product-info">
-							<a href="{{item.link}}" class="product-title">{{item.title}}
-                      		<span class="product-description">{{item.description}}</span>
-						</div>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</div>
+                    <!-- results -->
+                    <div>
+                        <ul class = "products-list product-list-in-box">
+                            <li class = "item box" ng-repeat = "item in popular | orderBy: -score"
+                                style = "margin: 0 0 5px 0; padding: 10px">
+                                <div class = "product-img">
+                                    <img style = "width:40px;height:40px" ng-src = "/img/search/{{item.type}}-new.png"
+                                         alt = "Image">
+                                </div>
+                                <div class = "product-info">
+                                    <a href = "{{item.link}}" class = "product-title">{{item.title}}
+                                        <span class = "product-description">{{item.description}}</span>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
