Revert "Update privacy.ejs"
This reverts commit 0be62abe063cfe817fbbcc185b96f507adc5b313.

--- a/views/admin-lte/statics/privacy.ejs
+++ b/views/admin-lte/statics/privacy.ejs
@@ -131,7 +131,7 @@ Telefon: 0234/32-28720<o:p></o:p></span></p>
 normal'><span lang=DE style='font-size:13.5pt;font-family:"Times New Roman",serif;
 mso-fareast-font-family:"Times New Roman";color:black;mso-ansi-language:DE;
 mso-fareast-language:DE'>E-Mail:&nbsp;</span><a
-                                                ><span lang=DE style='font-size:13.5pt;
+                                                href="mailto:kai-uwe.loser@uni-due.de"><span lang=DE style='font-size:13.5pt;
 font-family:"Times New Roman",serif;mso-fareast-font-family:"Times New Roman";
 mso-ansi-language:DE;mso-fareast-language:DE'>kai-uwe.loser@uni-due.de</span></a><span
                                                 lang=DE style='font-size:13.5pt;font-family:"Times New Roman",serif;mso-fareast-font-family:
