--- a/views/admin-lte/statics/privacy.ejs
+++ b/views/admin-lte/statics/privacy.ejs
@@ -130,10 +130,9 @@ Telefon: 0234/32-28720<o:p></o:p></span></p>
                                     <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
 normal'><span lang=DE style='font-size:13.5pt;font-family:"Times New Roman",serif;
 mso-fareast-font-family:"Times New Roman";color:black;mso-ansi-language:DE;
-mso-fareast-language:DE'>E-Mail:&nbsp;</span><a
-                                                href="mailto:kai-uwe.loser@uni-due.de"><span lang=DE style='font-size:13.5pt;
+mso-fareast-language:DE'>E-Mail:&nbsp;</span><a><span lang=DE style='font-size:13.5pt;
 font-family:"Times New Roman",serif;mso-fareast-font-family:"Times New Roman";
-mso-ansi-language:DE;mso-fareast-language:DE'>kai-uwe.loser@uni-due.de</span></a><span
+mso-ansi-language:DE;mso-fareast-language:DE'>kai-uwe.loser[at]uni-due.de</span></a><span
                                                 lang=DE style='font-size:13.5pt;font-family:"Times New Roman",serif;mso-fareast-font-family:
 "Times New Roman";color:black;mso-ansi-language:DE;mso-fareast-language:DE'><o:p></o:p></span></p>
 
