Commit for a deployment

--- a/views/admin-lte/statics/about.ejs
+++ b/views/admin-lte/statics/about.ejs
@@ -24,12 +24,8 @@
 
                                 <p>
                                     CourseMapper is a mind map-based collaborative course annotation and analytics
-                                    platform
-                                    that
-                                    fosters collaboration and interaction around pdf/video learning materials, supported
-                                    by
-                                    visual
-                                    learning analytics.
+                                    platform that fosters collaboration and interaction around pdf/video learning
+                                    materials, supported by visual learning analytics.
                                 </p>
                                 <br>
                                 <p>
