--- a/views/admin-lte/course/newsfeedUpdate/newsfeedUpdate.ejs
+++ b/views/admin-lte/course/newsfeedUpdate/newsfeedUpdate.ejs
@@ -49,7 +49,6 @@
                                             <!--<b>{{nfData.userId.displayName}}</b> <span ng-show="'{{nfData.actionSubject}}' != 'canceled vote'">{{nfData.actionType}}</span> {{nfData.actionSubject}}<span ng-show="'{{nfData.actionType}}' == 'added'"> </span>
                                             <a><b>{{nfData.actionName}}</b></a>-->
                                             <b>{{nfData.userId.displayName | capitalize}}</b> {{nfData.actionType}} <span ng-if="nfData.actionType == 'enrolled'">in</span><span ng-if="nfData.actionType == 'replied'">to</span><span ng-if = "nfData.actionType == 'commented'">on</span> {{nfData.actionSubject}} <span ng-if="nfData.actionSubject == 'pdf annotation' || nfData.actionSubject == 'video annotation'">in</span>
-                                            <a ng-show="nfData.actionSubject == 'node' || nfData.actionSubject == 'content node' || nfData.actionSubject == 'sub topic'" href="#/cid/{{curUrl.courseId}}?tab=map&markedNode={{nfData.actionSubjectIds}}"><b>{{nfData.actionName | capitalize}}</b></a>
                                             <!-- if type deleted content node, don't show a-href to avoid error url -->
 <!--                                            <span ng-if="nfData.actionType == 'deleted'" ng-show="nfData.actionSubject == 'content node'"><b>{{nfData.actionName | capitalize}}</b></span>-->
 <!--                                            <a ng-if="nfData.actionType != 'deleted'" ng-show="nfData.actionSubject == 'content node'" href="/treeNode/{{nfData.nodeId._id}}/#/cid/{{curUrl.courseId}}/nid/{{nfData.nodeId._id}}"><b>{{nfData.actionName | capitalize}}</b></a>-->
@@ -67,6 +66,7 @@
                                                             class = "text-muted">(item deleted)</small></ng-template>
 
                                                 <ng-template ng-if = "!nfData.isSubjectDeleted">
+                                                    <a ng-if ="nfData.actionSubject == 'node' || nfData.actionSubject == 'content node' || nfData.actionSubject == 'sub topic'" href="#/cid/{{curUrl.courseId}}?tab=map&markedNode={{nfData.actionSubjectIds}}"><b>{{nfData.actionName | capitalize}}</b></a>
                                                     <a ng-if ="nfData.actionSubject == 'discussion'" href="#/cid/{{curUrl.courseId}}?tab=discussion&pid={{nfData.actionSubjectIds}}"><b>{{nfData.actionName | capitalize}}</b></a>
                                                     <a ng-if ="nfData.actionSubject == 'reply in discussion'" href="#/cid/{{curUrl.courseId}}?tab=discussion&pid={{nfData.actionSubjectIds}}"><b>{{nfData.actionName | capitalize}}</b></a>
                                                     <a ng-if ="nfData.actionSubject == 'course'" href="#/cid/{{curUrl.courseId}}?tab=preview"><b>{{nfData.actionName | capitalize}}</b></a>
